[gd_scene load_steps=2 format=3 uid="uid://b3lvpbgfmqp3j"]

[ext_resource type="Script" path="res://scripts/MultiplayerController.gd" id="1_pvjv7"]

[node name="MultiplayerInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pvjv7")
Address = null

[node name="HostButton" type="Button" parent="."]
layout_mode = 0
offset_left = 314.0
offset_top = 64.0
offset_right = 795.0
offset_bottom = 156.0
text = "Host LAN Server"

[node name="JoinButton" type="Button" parent="."]
layout_mode = 0
offset_left = 324.0
offset_top = 258.0
offset_right = 804.0
offset_bottom = 352.0
text = "Join Server"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 330.0
offset_top = 436.0
offset_right = 795.0
offset_bottom = 525.0
text = "Start Game
"

[connection signal="button_down" from="HostButton" to="." method="_on_host_button_button_down"]
[connection signal="button_down" from="JoinButton" to="." method="_on_join_button_button_down"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
